--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
         <div class="tower-yellow hidden">Aux jaunes de jouer</div>
         <div class="red-win hidden">Les rouges ont gagné</div>
         <div class="yellow-win hidden">Les jaune ont gagné</div>
-        <div class="count-red"></div>
         <div class="contenaire"></div>
-        <div class="count-yellow"></div>
         <div class="rejouer hidden">Rejouer</div>
         <div class="bottom-layer">
             <div class="playervs">Joueur contre joueur</div>
             <div class="clear"></div>
             <div class="rules">Règles</div>
         </div>
+        <div class="time">20</div>
     </main>
     
     <script src="assets/js/script.js"></script>
