--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
             <div class="tower-yellow hidden">Aux jaunes de jouer</div>
             <div class="red-win hidden">Les rouges ont gagné</div>
             <div class="yellow-win hidden">Les jaune ont gagné</div>
+            <div class="match-nulle hidden">Match nulle</div>
             <div class="contenaire"></div>
             <div class="rejouer hidden">
                 <span>Player x
                 </span> <br>WINS
                 <p class="rejouer-button">Rejouer</p>
+            </div>
+            <div class="timer">
+                <p>Chronomètre</p>
+                <div class="deconte-timer"></div>
             </div>
             <div class="bottom-layer purple"></div>
         </div>
