--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
     <main>
         <div class=" wrapper-game hidden">
@@ -32,7 +30,6 @@
             <div class="tower-yellow hidden">Aux jaunes de jouer</div>
             <div class="red-win hidden">Les rouges ont gagné</div>
             <div class="yellow-win hidden">Les jaune ont gagné</div>
-            <div class="match-nulle hidden">Match nulle</div>
             <div class="contenaire"></div>
             <div class="rejouer hidden">
                 <span>Player x
@@ -41,7 +38,7 @@
             </div>
             <div class="timer">
                 <p>Chronomètre</p>
-                <div class="deconte-timer"></div>
+                <div class="deconte-timer">20</div>
             </div>
             <div class="bottom-layer purple"></div>
         </div>
@@ -68,16 +65,11 @@
             </p>
             <p> Le vainqueur est le joueur qui réalise le premier un alignement (horizontal, vertical ou diagonal) consécutif d'au moins quatre pions de sa couleur.
             </p>
-            <p> Si, alors que toutes les cases de la grille de jeu sont remplies, aucun des deux joueurs n'a réalisé un tel alignement, la partie est déclarée nulle. 
+            <p> Si, alors que toutes les cases de la grille de jeu sont remplies, aucun des deux joueurs n'a réalisé un tel alignement, la partie est déclarée nulle.
             </p>
-            <div class="playervs rulesButton">Jouer !
-            </div>
         </div>
-
     </main>
-
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/400fd5cf21.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
